[MODINVOICE-618]. Cannot edit invoice line comments, subscription info or add tags for invoice lines where budget from prior FY is closed